# PythonProjectTemplate

./: .gitignore  README.md  pyproject.toml
same_project/: main.py
same_project/utils/: same_util.py
tests/: conftest.py
tests/utils/: test_same_util.py
