[tool.poetry]
name = "same-project"
version = "0.1.0"
description = "same_description"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "same_project" },
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
